Notícias finalizado e rodapé iniciado

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-tml lang="pt-br">
+<!DOCTYPE html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -123,10 +124,164 @@ tml lang="pt-br">
                 </div>
             </div>
         </section>
+        <section class="cards">
+            <div class="cards-position">
+                <div class="cards-center">
+                    <div class="notice">
+                        <a href="#">
+                            <img src="img/T1 1-1.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                    <div class="notice">
+                        <a href="#">
+                            <img src="img/T1 1-2.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                    <div class="notice">
+                        <a href="#">
+                            <img src="img/T1 1-3.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                    <div class="notice">
+                        <a href="#">
+                            <img src="img/T1 1-4.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                    <div class="notice">
+                        <a href="#">
+                            <img src="Img/T1 1.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                    <div class="notice">
+                        <a href="#">
+                            <img src="img/T1 1.png" alt="">
+                            <h3>Título Da Notícia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta consequatur dolorem quis
+                                fugiat similique, ipsum, fugit velit autem ut aliquam error eum dolores, incidunt non
+                                modi recusandae dolore! Tempora, repellat.</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="aside">
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
 
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <div class="rodape">
+            <div class="links-uteis">
+                <ul class="links">
+                    <h2>Links Úteis</h2>
+                    <li><a href="#">Regras de Utilização</a></li>
+                    <li><a href="#">Suport</a></li>
+                    <li><a href="#">Central de Ajuda</a></li>
+                    <li><a href="#">Mande-nos uma mensagem</a></li>
+                </ul>
+                <ul class="links">
+                    <h2>Páginas</h2>
+                    <li><a href="#">Início</a></li>
+                    <li><a href="#">Campeonatos</a></li>
+                    <li><a href="#">Resultados</a></li>
+                    <li><a href="#">Notícias</a></li>
+                    <li><a href="#">Login/Cadastro</a></li>
+                </ul>
+            </div>
+            <img src="img/Logo_Branco 1.svg" alt="Logo E-Players">
+            <div class="email">
+                <p>Faça parte do nosso clan, recebe notícias e promoções!</p>
+                <ul class="cadastro">
+                    <li class="e-mail"><p>E-Mail</p></li></div>
+                    <li class="cadastrar"><p>Cadastrar</p></li></div>
+                </ul>
+                <ul class="redes">
+                    <li><p>Siga-nos em</p></li>
+                    <li><img src="img/Logo-Instagram.png" alt="Logo do Instagram"></li>
+                    <li><img src="img/Logo-facebook.png" alt="Logo do Facebook"></li>
+                    <li><img src="img/Logo-youtube.png" alt="Logo do Youtube"></li>
+                </ul>
+            </div>
+        </div>
     </footer>
 
 </body>
