--- a/index.html
+++ b/index.html
@@ -248,38 +248,42 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div class="rodape">
-            <div class="links-uteis">
-                <ul class="links">
-                    <h2>Links Úteis</h2>
+    <footer class="rodape">
+        <div class="links-footer">
+            <div class="links">
+                <h2>Links Úteis</h2>
+                <ul>
                     <li><a href="#">Regras de Utilização</a></li>
                     <li><a href="#">Suport</a></li>
                     <li><a href="#">Central de Ajuda</a></li>
                     <li><a href="#">Mande-nos uma mensagem</a></li>
                 </ul>
-                <ul class="links">
-                    <h2>Páginas</h2>
+            </div>
+            <nav class="links">
+                <h2>Páginas</h2>
+                <ul>
                     <li><a href="#">Início</a></li>
                     <li><a href="#">Campeonatos</a></li>
                     <li><a href="#">Resultados</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Login/Cadastro</a></li>
                 </ul>
+            </nav>
+        </div>
+        <img class="logo-rodape" src="img/logo.svg" alt="Logo E-Players">
+        <div class="sociais">
+            <div class="newslatter">
+                <h2>Faça parte do nosso clan, receba notícias e promoções!</h2>
+                <form action="#">
+                    <input type="email" name="email" placeholder="E-MAIL">
+                    <input type="submit" value="Cadastrar">
+                </form>
             </div>
-            <img src="img/Logo_Branco 1.svg" alt="Logo E-Players">
-            <div class="email">
-                <p>Faça parte do nosso clan, recebe notícias e promoções!</p>
-                <ul class="cadastro">
-                    <li class="e-mail"><p>E-Mail</p></li></div>
-                    <li class="cadastrar"><p>Cadastrar</p></li></div>
-                </ul>
-                <ul class="redes">
-                    <li><p>Siga-nos em</p></li>
-                    <li><img src="img/Logo-Instagram.png" alt="Logo do Instagram"></li>
-                    <li><img src="img/Logo-facebook.png" alt="Logo do Facebook"></li>
-                    <li><img src="img/Logo-youtube.png" alt="Logo do Youtube"></li>
-                </ul>
+            <div class="siga-nos flex-center-bt">
+                <h2>Siga-nos em:</h2>
+                <a href="https://www.instagram.com/jovi.oli/"><img src="img/Insta.png" alt="Logo do Instagram"></a>
+                <a href="https://www.facebook.com/"><img src="img/face.png" alt="Logo do Facebook"></a>
+                <a href="https://www.youtube.com/channel/UCnnZESX89Kd_MZUA6tQahLQ?"><img src="img/youtube.png" alt="Logo do Youtube"></a>
             </div>
         </div>
     </footer>
