Resoluções max-width: 74em e 64em finalizados

--- a/index.html
+++ b/index.html
@@ -183,7 +183,27 @@
                     </div>
                 </div>
                 <div class="aside">
-                    <div class="next">
+                    <div class="next none">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next none">
+                        <a href="#">
+                            <h4>Sk</h4>
+                            <img src="img/SK 1.png" alt="">
+                            <h4>vs</h4>
+                            <img src="/Img/logo-do-corinthians.png" alt="">
+                            <h4>COR</h4>
+                            <p>03/11/2020 21:30</p>
+                        </a>
+                    </div>
+                    <div class="next none">
                         <a href="#">
                             <h4>Sk</h4>
                             <img src="img/SK 1.png" alt="">
@@ -203,7 +223,7 @@
                             <p>03/11/2020 21:30</p>
                         </a>
                     </div>
-                    <div class="next">
+                    <div class="next none-2">
                         <a href="#">
                             <h4>Sk</h4>
                             <img src="img/SK 1.png" alt="">
@@ -213,27 +233,7 @@
                             <p>03/11/2020 21:30</p>
                         </a>
                     </div>
-                    <div class="next">
-                        <a href="#">
-                            <h4>Sk</h4>
-                            <img src="img/SK 1.png" alt="">
-                            <h4>vs</h4>
-                            <img src="/Img/logo-do-corinthians.png" alt="">
-                            <h4>COR</h4>
-                            <p>03/11/2020 21:30</p>
-                        </a>
-                    </div>
-                    <div class="next">
-                        <a href="#">
-                            <h4>Sk</h4>
-                            <img src="img/SK 1.png" alt="">
-                            <h4>vs</h4>
-                            <img src="/Img/logo-do-corinthians.png" alt="">
-                            <h4>COR</h4>
-                            <p>03/11/2020 21:30</p>
-                        </a>
-                    </div>
-                    <div class="next">
+                    <div class="next none-2">
                         <a href="#">
                             <h4>Sk</h4>
                             <img src="img/SK 1.png" alt="">
@@ -287,6 +287,7 @@
             </div>
         </div>
     </footer>
+    
 
 </body>
 
