--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/8ea9353849.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,14 +17,14 @@
                 <img src="img/logo.svg" alt="Logo E-Players">
             </a>
             <nav class="menu">
-                <ul>
+                <ul id="meusLinks">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="#">Campeonatos</a></li>
                     <li><a href="#">Resultados</a></li>
                     <li><a href="#">Notícias</a></li>
                     <li><a href="#">Login/Cadastro</a></li>
                 </ul>
-                <a href="#" id="menu-bars">
+                <a class="btnMenu" onclick="meuMenu">
                     <i class="fas fa-bars"></i>
                 </a>
             </nav>
@@ -50,12 +50,12 @@
         <section class="jogos">
             <div class="content flex-center-bt">
                 <ul class="flex-center-bt">
-                    <li><a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo Formula fa-rotate-180"></a></li>
+                    <li class="none-4"><a href="#"><img src="img/formula-1-logo-1-1 1.png" alt="Logo Formula fa-rotate-180"></a></li>
                     <li><a href="#"><img src="img/logo-lol-300x131 1.png" alt="Logo do league of Legend"></a></li>
                     <li><a href="#"><img src="img/Counter-Strike-Logo-Transparent-PNG 1.png"
                                 alt="Logo do counter strike"></a></li>
                     <li><a href="#"><img src="img/4bcd537b6c034e297f0030cf08887426 1.png" alt="Logo Valorant"></a></li>
-                    <li><a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo do fifa"></a></li>
+                    <li class="none-4"><a href="#"><img src="img/800px-FIFA_series_logo 1.png" alt="Logo do fifa"></a></li>
                 </ul>
             </div>
         </section>
@@ -110,7 +110,7 @@
                             <p>SK</p>
                         </div>
                     </div>
-                    <div class="partida">
+                    <div class="partida none-3">
                         <div class="time1">
                             <p>SK</p>
                             <img src="img/SK 1.png" alt="Logo do SK">
@@ -145,7 +145,7 @@
                                 modi recusandae dolore! Tempora, repellat.</p>
                         </a>
                     </div>
-                    <div class="notice">
+                    <div class="notice none-4">
                         <a href="#">
                             <img src="img/T1 1-3.png" alt="">
                             <h3>Título Da Notícia</h3>
@@ -154,7 +154,7 @@
                                 modi recusandae dolore! Tempora, repellat.</p>
                         </a>
                     </div>
-                    <div class="notice">
+                    <div class="notice none-4">
                         <a href="#">
                             <img src="img/T1 1-4.png" alt="">
                             <h3>Título Da Notícia</h3>
@@ -163,7 +163,7 @@
                                 modi recusandae dolore! Tempora, repellat.</p>
                         </a>
                     </div>
-                    <div class="notice">
+                    <div class="notice none-3">
                         <a href="#">
                             <img src="Img/T1 1.png" alt="">
                             <h3>Título Da Notícia</h3>
@@ -172,7 +172,7 @@
                                 modi recusandae dolore! Tempora, repellat.</p>
                         </a>
                     </div>
-                    <div class="notice">
+                    <div class="notice none-3 ">
                         <a href="#">
                             <img src="img/T1 1.png" alt="">
                             <h3>Título Da Notícia</h3>
@@ -213,7 +213,7 @@
                             <p>03/11/2020 21:30</p>
                         </a>
                     </div>
-                    <div class="next">
+                    <div class="next none-4">
                         <a href="#">
                             <h4>Sk</h4>
                             <img src="img/SK 1.png" alt="">
@@ -223,7 +223,7 @@
                             <p>03/11/2020 21:30</p>
                         </a>
                     </div>
-                    <div class="next none-2">
+                    <div class="next none-2 none-4">
                         <a href="#">
                             <h4>Sk</h4>
                             <img src="img/SK 1.png" alt="">
@@ -259,7 +259,7 @@
                     <li><a href="#">Mande-nos uma mensagem</a></li>
                 </ul>
             </div>
-            <nav class="links">
+            <nav class="links none-3">
                 <h2>Páginas</h2>
                 <ul>
                     <li><a href="#">Início</a></li>
@@ -272,7 +272,7 @@
         </div>
         <img class="logo-rodape" src="img/logo.svg" alt="Logo E-Players">
         <div class="sociais">
-            <div class="newslatter">
+            <div class="newslatter none-3">
                 <h2>Faça parte do nosso clan, receba notícias e promoções!</h2>
                 <form action="#">
                     <input type="email" name="email" placeholder="E-MAIL">
@@ -280,15 +280,23 @@
                 </form>
             </div>
             <div class="siga-nos flex-center-bt">
-                <h2>Siga-nos em:</h2>
+                <h2 class="none-3">Siga-nos em:</h2>
                 <a href="https://www.instagram.com/jovi.oli/"><img src="img/Insta.png" alt="Logo do Instagram"></a>
                 <a href="https://www.facebook.com/"><img src="img/face.png" alt="Logo do Facebook"></a>
                 <a href="https://www.youtube.com/channel/UCnnZESX89Kd_MZUA6tQahLQ?"><img src="img/youtube.png" alt="Logo do Youtube"></a>
             </div>
         </div>
     </footer>
-    
-
+      <script>
+            function meuMenu() {
+              var ulDoMenu = document.getElementById("meusLinks");
+              if (ulDoMenu.style.display === "flex") {
+                ulDoMenu.style.display = "none";
+              } else {
+                ulDoMenu.style.display = "flex";
+              }
+            }
+            </script>
 </body>
 
 </html>
